--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -131,7 +131,7 @@ Visually Impaired, Blind, Microsoft}
 
 \section{Introduction}
 
-Two million people are living with visual impairment in the UK and despite that indoor environment are often not designed for this vast of individuals in mind. This situation leads to a terrible experience of the visually impaired when they move around without depending on others. Mobility canes and guide dogs work for this case but are limited in their use. The canes have restricted use to a person needing to navigate from place to place, and the guide dogs are not currently available to assist all visually impaired persons in the UK. Also, the available navigation application cannot show the dynamic barriers in the way.Therefore, an easily available solution which can provide real-time assistance in an indoor environment for visually impaired people is highly needed. The Lighthouse team was working with Microsoft, which is both the sponsor and client of this project and who wanted the team to use wearable sensors which are low-cost and off the shelf.
+Two million people are living with visual impairment in the UK and despite that indoor environment are often not designed for this vast of individuals in mind.\cite{NHSBlindStatistics} This situation leads to a terrible experience of the visually impaired when they move around without depending on others. Mobility canes and guide dogs work for this case but are limited in their use. The canes have restricted use to a person needing to navigate from place to place, and the guide dogs are not currently available to assist all visually impaired persons in the UK. Also, the available navigation application cannot show the dynamic barriers in the way.Therefore, an easily available solution which can provide real-time assistance in an indoor environment for visually impaired people is highly needed. The Lighthouse team was working with Microsoft, which is both the sponsor and client of this project and who wanted the team to use wearable sensors which are low-cost and off the shelf.
 
 To solve the problem mentioned above, the team designed to build a platform which can process the data of the environment collected by sensors and give the user feedback about their surroundings, such as where they are and if there are obstacles nearby or not. When the user is entering an indoor environment, the platform achieves the dynamic obstacle mapping by processing the data collected by Android phone and wearable sensors, and the real-time details of the environment will be shown to users.
 By cooperation of 8 MSc students in Lighthouse team, one data transfer API, one processing platform and an Android application were delivered. The API provide the communication between sensors and processing platform which generate the data collected with sensor fusion method and store result to the database. The Android application gives user feedback of surroundings by querying the database and showing the result on the map.
@@ -167,6 +167,7 @@ Microsoft is both the sponsor and the client in this project, in addition to tha
 Mr Jarnail Chudge is representing Microsoft and will be the team's client for the duration of the project.
 
 \subsubsection{Visually Impaired People}
+The Lighthouse team is working on solutions that can assist the blind or partly-sighted people in their daily life. The visually impaired people want to know where they are and what kind of objects are in their environment, especially in front of them, and they want to be informed particularly about the direction, the change in the environment and other persons. Given the fact that moving around independently is a desire of them, this project aims to improve the current situation when visually impaired people going into a unfamiliar indoor environment.
 %\subsubsection{Academic}
 %The academic administrators and supervisors of this project have a specific vision for how the team should apply their knowledge to the development process and client communication.The outcomes the academic stakeholders are interested in are having the team maintain rigorous documentation of the project, upholding the state of the art software engineering processes and maintaining good communication with the client throughout the process.
 
