--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -462,7 +462,7 @@ Describe the testing scenario, the simulator and show diagrams that compare both
 %TODO: Talk about the cs students evaluation?
 
 \subsection{Android app}
-We decided to program in an android environment because the team is more familiar with programming in Java as opposed to C# and Objective C/Swift for Windows phone and IOS respectively. Moreover the team decided to use Java in building the components of our overall architecture, so it will be a good fit for the team to keep everything Java. Additionally the team helped with dealing with bugs, syntax and programming logic because we all focused on leveraging one programming language. This helped the team work together in an environment everyone was comfortable with and limit the risk posed to the project that comes with the team learning a new environment during development.
+We decided to program in an android environment because the team is more familiar with programming in Java as opposed to C\# and Objective C/Swift for Windows phone and IOS respectively. Moreover the team decided to use Java in building the components of our overall architecture, so it will be a good fit for the team to keep everything Java. Additionally the team helped with dealing with bugs, syntax and programming logic because we all focused on leveraging one programming language. This helped the team work together in an environment everyone was comfortable with and limit the risk posed to the project that comes with the team learning a new environment during development.
 
 \section{Life cycle and Future Work}
 \subsection{Current state}
