--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -513,7 +513,7 @@ The experience was helpful to understand that implementation of features should 
 
 \subsection{Cassandra Data Modelling}
 
-\subsection{Completing Tasks in Sprints}
+\subsection{Completing Tasks in Sprints}\textcolor{orange}{debatable though!. Was going to say something about having too many tasks in a sprint and ending up having to carry over tasks to the next sprint and etc.}
 
 \section{Conclusion}
 
