finished rewrite of architecture and implementation part.

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -166,12 +166,24 @@
 
 @misc{ApacheSpark,
   author = {The Apache Software Foundation},
-  title = {Apache Spark},
+  title = {{Apache} Spark},
   year = 2016,
   howpublished = {\url{http://spark.apache.org/}},
   url = {http://spark.apache.org/},
-  note = {Accessed: 2016-08-31}
+  note = {Accessed: 2016-08-31},
+  lastaccessed = {August 31, 2016}
 }
+
+@misc{ApacheSparkStreaming,
+  author = {The Apache Software Foundation},
+  title = {Apache Spark Streaming},
+  year = 2016,
+  howpublished = {\url{http://spark.apache.org/streaming/}},
+  url = {http://spark.apache.org/streaming/},
+  note = {Accessed: 2016-09-01}
+}
+
+
 
 @misc{ApacheCassandra,
   author = {The Apache Software Foundation},
