--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -193,3 +193,21 @@
   url = {http://cassandra.apache.org/},
   note = {Accessed: 2016-08-31}
 }
+@inproceedings{cheon2002simple,
+  title={A simple and practical approach to unit testing: The JML and JUnit way},
+  author={Cheon, Yoonsik and Leavens, Gary T},
+  booktitle={European Conference on Object-Oriented Programming},
+  pages={231--255},
+  year={2002},
+  organization={Springer}
+}
+@article{jorgensen1994object,
+  title={Object-oriented integration testing},
+  author={Jorgensen, Paul C and Erickson, Carl},
+  journal={Communications of the ACM},
+  volume={37},
+  number={9},
+  pages={30--38},
+  year={1994},
+  publisher={ACM}
+}
